example/envoy.yaml
static_resources:
  listeners:
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 10000
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          codec_type: AUTO
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains:
              - "*"
              routes:
              - match: /healthcheck
                direct_response:
                  status: 200
                  body:
                    inline_string: "OK\n"
              - match:
                  prefix: "/"
                route:
                  cluster: echo_service

          http_filters:
          - name: envoy.filters.http.wasm
            typed_config:
              "@type": type.googleapis.com/udpa.type.v1.TypedStruct
              type_url: type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
              value:
                config:
                  name: "rbi_filter"
                  root_id: "rbi_filter_id"
                  configuration:
                    "@type": "type.googleapis.com/google.protobuf.StringValue"
                    value: |
                      {
                        "hello": "<h1>Hello WASM</h1>"
                      }
                  vm_config:
                    runtime: "envoy.wasm.runtime.v8"
                    vm_id: "rbi_injection_vm_id"
                    code:
                      local:
                        filename: "/etc/envoy/envoy_rbi_filter.wasm"
                    configuration: {}
          - name: envoy.filters.http.router

  clusters:
  - name: echo_service
    connect_timeout: 0.25s
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: echo_service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: echo_service
                port_value: 8080
